--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-portal": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.1.1",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.3",
     "@segment/analytics-next": "^1.51.1",
@@ -37,11 +38,13 @@
     "@tanstack/react-query": "4.22.0",
     "@tanstack/react-table": "^8.7.9",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.7.9",
     "chokidar": "^3.5.3",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "framer-motion": "^9.1.6",
@@ -49,6 +52,8 @@
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
+    "iso8601-duration": "^2.1.2",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "medusa-react": "^9.0.14",
     "mini-css-extract-plugin": "^2.7.6",
@@ -60,6 +65,7 @@
     "postcss-preset-env": "^8.4.1",
     "prism-react-renderer": "^2.0.4",
     "process": "^0.11.10",
+    "qs": "^6.14.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-collapsible": "^2.8.3",
@@ -116,11 +122,13 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "i18next-parser": "^8.0.0",
-    "jest": "25.5.4",
-    "ts-jest": "25.5.1",
+    "jest": "29.7.0",
+    "ts-jest": "29.2.5",
     "ts-node": "^10.9.1",
     "tsup": "6.7.0",
     "typescript": "^4.9.3",
-    "vite": "^5.0.12"
-  }
+    "vite": "^5.0.12",
+    "vite-plugin-compression": "^0.5.1"
+  },
+  "packageManager": "pnpm@9.15.4"
 }
